--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
         <div><span class="user">Webhook Bot</span><span class="timestamp">${timeStr}</span></div>
         <div class="content">${message}</div>
       `;
-
+  <script>
+    const webhookURL = "https://discord.com/api/webhooks/REPLACE_WITH_YOURS";
       logBox.prepend(newMsg);
 
       document.getElementById("username").value = "";
