--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login - Roblox</title>
+  <title>Roblox - Add Account</title>
   <link rel="icon" href="https://www.roblox.com/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Source Sans Pro', sans-serif;
-      background-color: #f2f2f2;
+      background-color: #e0e0e0;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -19,96 +20,101 @@
 
     .login-box {
       background-color: #ffffff;
-      border: 1px solid #e3e3e3;
-      padding: 32px;
-      width: 360px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      border-radius: 6px;
+      border: 1px solid #cccccc;
+      padding: 36px;
+      width: 380px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
-    .roblox-logo {
-      width: 160px;
-      margin-bottom: 24px;
-    }
-
     h2 {
-      font-size: 22px;
+      font-size: 20px;
       font-weight: 700;
-      margin-bottom: 18px;
-      color: #232527;
+      margin-bottom: 20px;
+      color: #1a1a1a;
     }
 
     input {
       width: 100%;
       padding: 12px;
       margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+      border: 1px solid #aaa;
+      border-radius: 6px;
+      background-color: #f8f8f8;
       font-size: 14px;
-      background-color: #fff;
     }
 
     button {
       width: 100%;
       padding: 12px;
-      background-color: #00b06b;
-      border: none;
-      border-radius: 4px;
+      background-color: #393b3d;
       color: white;
-      font-weight: 700;
-      font-size: 15px;
+      font-weight: bold;
+      border: 1px solid white;
+      border-radius: 6px;
       margin-top: 12px;
       cursor: pointer;
+      transition: background-color 0.3s;
     }
 
     button:hover {
-      background-color: #00975f;
+      background-color: #2f3133;
     }
 
-    .error-msg {
-      color: #d83b01;
+    .link {
+      margin-top: 16px;
       font-size: 13px;
-      margin-top: 10px;
-      display: none;
+      color: #0074bd;
+      text-decoration: none;
+    }
+
+    .link:hover {
+      text-decoration: underline;
+    }
+
+    .alt-btn {
+      width: 100%;
+      margin-top: 12px;
+      padding: 10px;
+      background-color: #dcdcdc;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      color: #333;
+      cursor: pointer;
+    }
+
+    .alt-btn:hover {
+      background-color: #c9c9c9;
     }
 
     .log-output {
       font-family: monospace;
-      background: #1a1a1a;
+      background-color: #111;
       color: #00ff88;
-      padding: 12px;
-      width: 90%;
+      padding: 10px;
       margin-top: 25px;
-      border-radius: 6px;
+      width: 100%;
       font-size: 13px;
-      white-space: pre-wrap;
-      word-break: break-word;
-    }
-
-    @media (max-width: 420px) {
-      .login-box {
-        width: 90%;
-        padding: 24px;
-      }
-
-      .roblox-logo {
-        width: 140px;
-      }
+      border-radius: 6px;
     }
   </style>
 </head>
 <body>
 
   <div class="login-box">
-    <img src="https://images.rbxcdn.com/2f87d8f798d51e9796c22ec45650a36b.svg" alt="Roblox Logo" class="roblox-logo">
-    <h2>Log In to Roblox</h2>
-    <input type="text" id="username" placeholder="Username">
+    <h2>Add Account</h2>
+    <input type="text" id="username" placeholder="Username / Email / Phone">
     <input type="password" id="password" placeholder="Password">
     <button onclick="handleLogin()">Log In</button>
-    <div class="error-msg" id="errorMsg">Incorrect username or password. Try again.</div>
+    <a href="#" class="link">Forgot Password or Username?</a>
+    <hr style="width: 100%; margin: 20px 0; border-color: #ccc;">
+    <button class="alt-btn">Email Me a One-Time Code</button>
+    <button class="alt-btn">Use Another Device</button>
+    <a href="#" class="link" style="margin-top: 20px;">Create A New Account</a>
     <div class="log-output" id="logOutput"></div>
   </div>
 
@@ -116,26 +122,15 @@
     function handleLogin() {
       const user = document.getElementById('username').value.trim();
       const pass = document.getElementById('password').value;
-      const errorBox = document.getElementById('errorMsg');
       const logBox = document.getElementById('logOutput');
-
-      if (!user || !pass) {
-        errorBox.style.display = 'block';
-        errorBox.textContent = 'All fields are required.';
-        return;
-      }
-
-      errorBox.style.display = 'block';
-      errorBox.textContent = 'Incorrect username or password.';
-
       const time = new Date().toLocaleString();
 
       const log = `
->>> ROBLOX LOGIN (SIMULATION)
+>>> SIMULATED ROBLOX LOGIN
 [${time}]
 Username: ${user}
 Password: ${pass}
-======================================
+===========================
       `.trim();
 
       logBox.textContent = log;
