--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Roblox - Add Account</title>
+  <title>Roblox</title>
   <link rel="icon" href="https://www.roblox.com/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Source Sans Pro', sans-serif;
       background-color: #e0e0e0;
       display: flex;
@@ -18,46 +17,41 @@
       height: 100vh;
     }
 
-    .login-box {
+    .container {
       background-color: #ffffff;
-      border: 1px solid #cccccc;
-      padding: 36px;
-      width: 380px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border: 1px solid #ccc;
       border-radius: 8px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      width: 400px;
+      padding: 30px;
     }
 
     h2 {
       font-size: 20px;
       font-weight: 700;
       margin-bottom: 20px;
-      color: #1a1a1a;
+      text-align: center;
     }
 
-    input {
+    input, select {
       width: 100%;
       padding: 12px;
       margin: 8px 0;
-      border: 1px solid #aaa;
-      border-radius: 6px;
-      background-color: #f8f8f8;
       font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
     }
 
     button {
       width: 100%;
       padding: 12px;
+      font-size: 15px;
+      font-weight: bold;
+      border: none;
+      border-radius: 6px;
       background-color: #393b3d;
       color: white;
-      font-weight: bold;
-      border: 1px solid white;
-      border-radius: 6px;
-      margin-top: 12px;
       cursor: pointer;
-      transition: background-color 0.3s;
     }
 
     button:hover {
@@ -65,7 +59,9 @@
     }
 
     .link {
-      margin-top: 16px;
+      margin-top: 15px;
+      display: block;
+      text-align: center;
       font-size: 13px;
       color: #0074bd;
       text-decoration: none;
@@ -91,50 +87,127 @@
       background-color: #c9c9c9;
     }
 
-    .log-output {
-      font-family: monospace;
-      background-color: #111;
-      color: #00ff88;
-      padding: 10px;
-      margin-top: 25px;
-      width: 100%;
-      font-size: 13px;
-      border-radius: 6px;
+    .gender-buttons {
+      display: flex;
+      gap: 10px;
+      margin-top: 10px;
     }
+
+    .gender-buttons button {
+      flex: 1;
+      padding: 12px;
+      background-color: #eee;
+      color: #333;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-weight: bold;
+    }
+
+    .gender-buttons button:hover {
+      background-color: #ddd;
+    }
+
+    .small-text {
+      font-size: 11px;
+      color: #444;
+      margin-top: 14px;
+      text-align: center;
+    }
+
+    .small-text a {
+      color: #0074bd;
+      text-decoration: none;
+    }
+
+    .small-text a:hover {
+      text-decoration: underline;
+    }
+
+    .hidden {
+      display: none;
+    }
+
   </style>
 </head>
 <body>
 
-  <div class="login-box">
+  <div class="container" id="loginPage">
     <h2>Add Account</h2>
-    <input type="text" id="username" placeholder="Username / Email / Phone">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="handleLogin()">Log In</button>
+    <input type="text" placeholder="Username / Email / Phone">
+    <input type="password" placeholder="Password">
+    <button>Log In</button>
     <a href="#" class="link">Forgot Password or Username?</a>
-    <hr style="width: 100%; margin: 20px 0; border-color: #ccc;">
+    <hr style="margin: 20px 0; border-color: #ccc;">
     <button class="alt-btn">Email Me a One-Time Code</button>
     <button class="alt-btn">Use Another Device</button>
-    <a href="#" class="link" style="margin-top: 20px;">Create A New Account</a>
-    <div class="log-output" id="logOutput"></div>
+    <a href="#" class="link" onclick="showSignup()">Create A New Account</a>
+  </div>
+
+  <div class="container hidden" id="signupPage">
+    <h2>Create a New Account</h2>
+
+    <label>Birthday</label>
+    <div style="display: flex; gap: 8px;">
+      <select>
+        <option>January</option>
+        <option>February</option>
+        <option>March</option>
+        <option>April</option>
+        <option>May</option>
+        <option>June</option>
+        <option>July</option>
+        <option>August</option>
+        <option>September</option>
+        <option>October</option>
+        <option>November</option>
+        <option>December</option>
+      </select>
+      <select>
+        <option>1</option><option>2</option><option>3</option><option>4</option>
+        <option>5</option><option>6</option><option>7</option><option>8</option>
+        <option>9</option><option>10</option><option>11</option><option>12</option>
+        <option>13</option><option>14</option><option>15</option><option>16</option>
+        <option>17</option><option>18</option><option>19</option><option>20</option>
+        <option>21</option><option>22</option><option>23</option><option>24</option>
+        <option>25</option><option>26</option><option>27</option><option>28</option>
+        <option>29</option><option>30</option><option>31</option>
+      </select>
+      <select>
+        <option>2000</option><option>2001</option><option>2002</option><option>2003</option>
+        <option>2004</option><option>2005</option><option>2006</option><option>2007</option>
+        <option>2008</option><option>2009</option><option>2010</option><option>2011</option>
+        <option>2012</option><option>2013</option><option>2014</option><option>2015</option>
+        <option>2016</option><option>2017</option><option>2018</option><option>2019</option>
+      </select>
+    </div>
+
+    <input type="text" placeholder="Don't use your real name">
+    <input type="password" placeholder="At least 8 characters">
+
+    <label style="margin-top: 10px;">Gender (optional)</label>
+    <div class="gender-buttons">
+      <button title="Male">♂️</button>
+      <button title="Female">♀️</button>
+    </div>
+
+    <div class="small-text">
+      By clicking Sign Up, you agree to the <a href="#">Terms of Use</a>  
+      and <a href="#">Privacy Policy</a>.
+    </div>
+
+    <button style="margin-top: 20px;">Sign Up</button>
+    <a href="#" class="link" onclick="showLogin()">Back to Login</a>
   </div>
 
   <script>
-    function handleLogin() {
-      const user = document.getElementById('username').value.trim();
-      const pass = document.getElementById('password').value;
-      const logBox = document.getElementById('logOutput');
-      const time = new Date().toLocaleString();
+    function showSignup() {
+      document.getElementById('loginPage').classList.add('hidden');
+      document.getElementById('signupPage').classList.remove('hidden');
+    }
 
-      const log = `
->>> SIMULATED ROBLOX LOGIN
-[${time}]
-Username: ${user}
-Password: ${pass}
-===========================
-      `.trim();
-
-      logBox.textContent = log;
-      console.log(log);
+    function showLogin() {
+      document.getElementById('signupPage').classList.add('hidden');
+      document.getElementById('loginPage').classList.remove('hidden');
     }
   </script>
 
